JSON read fix